fix: discord invite link

--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -8,7 +8,7 @@ mediaGitHubURL = "https://github.com/Fayorg/MonkeCraft-Launcher"
 mediaTwitterURL = "#"
 mediaInstagramURL = "#"
 mediaYouTubeURL = "#"
-mediaDiscordURL = "https://discord.gg/CcxAbT8a5p"
+mediaDiscordURL = "https://discord.gg/gMT468uGg5"
 
 [ejs.settings]
 sourceGithubLink = "https://github.com/Fayorg/MonkeCraft-Launcher"
